UI alignment fixes

--- a/Medicine_Retail_Poc/ASP.NET_Medicine_POC/MedicineManagement/MedicineManagement/Views/Medicine/Home.cshtml
+++ b/Medicine_Retail_Poc/ASP.NET_Medicine_POC/MedicineManagement/MedicineManagement/Views/Medicine/Home.cshtml
@@ -30,7 +30,7 @@
 
 <div class="row mt-4">
     <div class="col-12">
-        <h1 class="mt-5 mb-3" style="padding: 5px 15px; border-bottom: 1px solid #ddd;">Medicines by Category: @ViewBag.Category</h1>
+        <h1 class="mt-5 pt-5 mb-2" style="padding: 5px 15px; border-bottom: 1px solid #ddd;">Medicines by Category: @ViewBag.Category</h1>
     </div>
 
     <div class="col-md-12 mt-4">
