--- a/Medicine_Retail_Poc/ASP.NET_Medicine_POC/MedicineManagement/MedicineManagement/Views/Medicine/Index.cshtml
+++ b/Medicine_Retail_Poc/ASP.NET_Medicine_POC/MedicineManagement/MedicineManagement/Views/Medicine/Index.cshtml
@@ -43,7 +43,7 @@
         /* Adjust the width and spacing of the form container */
         .form-container {
             width: 80%;
-            margin: 8px auto;
+            margin: 8px 50px;
             padding: 7px 15px;
             border: 3px solid #f1f1f1;
             border-color: #244b81;
@@ -68,7 +68,7 @@
 
 </head>
 <body>
-    <h2 style="margin-left:85px; text-align: left; margin-bottom:100px;">Add Medicines</h2>
+    <h2 style="margin-left:85px; text-align: left; margin-bottom:10px; margin-top:100px;">Add Medicines</h2>
     <div class="row container" style="margin-bottom:80px;">
         <div class="col-md-8">
             <div class="form-container">
