--- a/Medicine_Retail_Poc/ASP.NET_Medicine_POC/MedicineManagement/MedicineManagement/Views/Shared/Disease.cshtml
+++ b/Medicine_Retail_Poc/ASP.NET_Medicine_POC/MedicineManagement/MedicineManagement/Views/Shared/Disease.cshtml
@@ -46,6 +46,10 @@
             height:0px;
         }
 
+        .side_bar{
+            margin-top: 100px;
+        }
+
         /* Active navigation item style */
 
         /*
@@ -111,7 +115,7 @@
     <div style="display: flex; flex-direction: row; height: 100%;">
         <!-- Sidebar -->
         <div class="sidebar" style="width: 200px; background-color: cadetblue; color: white; height: 100%; position: fixed; display: flex; flex-direction: column; align-items: center; margin-top:30px;">
-            <ul style="list-style-type: none; padding: 0;">
+            <ul class="side_bar" style="list-style-type: none; padding: 0;">
                 <li style="margin-bottom: 100px; margin-top: 90px; text-align: center;">
                     <a href="/Disease/Create" class="disease-link">Disease</a>
                 </li>
