--- a/Medicine_Retail_Poc/ASP.NET_Medicine_POC/MedicineManagement/MedicineManagement/Views/Medicine/Update.cshtml
+++ b/Medicine_Retail_Poc/ASP.NET_Medicine_POC/MedicineManagement/MedicineManagement/Views/Medicine/Update.cshtml
@@ -2,11 +2,12 @@
 
 @{
     ViewData["Title"] = "Update Medicine";
+    Layout = "~/Views/Shared/Disease.cshtml";
 }
 
 
 <!-- Message Overlay for Center Display -->
-<div class="centered" id="messageCenter">
+<div>
     @if (TempData["MedicineMessage"] != null)
     {
         <div class="alert alert-@(TempData["MedicineMessage"].ToString().Contains("successfully") ? "success" : "danger")">
@@ -23,20 +24,6 @@
     <style>
 
 
-        /* Center Message Overlay Styles */
-        .centered {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: rgba(0, 0, 0, 0.5);
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            z-index: 9999;
-        }
-
 
         /* Adjust the width and spacing of the form container */
         .form-container {
@@ -48,7 +35,9 @@
         }
 
         h4 {
-            text-align: center;
+            
+            margin-top:120px;
+            margin-left:110px
         }
 
         /* Add border to all input fields */
@@ -70,7 +59,7 @@
     <h4>@ViewData["Title"]</h4>
 
     <div class="row container">
-        <div class="col-md-8 mx-auto">
+        <div class="col-md-8">
             <div class="form-container">
                 <form asp-action="Update" method="post" enctype="multipart/form-data">
                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
