Css centralised and logo image upload

--- a/Medicine_Retail_Poc/ASP.NET_Medicine_POC/MedicineManagement/MedicineManagement/Views/Login/Index.cshtml
+++ b/Medicine_Retail_Poc/ASP.NET_Medicine_POC/MedicineManagement/MedicineManagement/Views/Login/Index.cshtml
@@ -26,61 +26,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="~/css/login.css">
     <title>login</title>
 
-    <style>
-
-
-        form {
-            width: 60%;
-            margin: auto;
-            margin-top: 2%;
-            /*background-color: #F7CAC9;*/
-            border: 3px solid #f1f1f1;
-            border-color: #244b81;
-        }
-
-
-        input[type=text], input[type=password] {
-            width: 100%;
-            padding: 8px 20px;
-            margin: 4px 0;
-            display: inline-block;
-            /*border: 1px solid #ccc;*/
-            box-sizing: border-box;
-            border: 1px solid #f1f1f1;
-            border-color: black;
-        }
-
-        button {
-            background-color: #244b81;
-            color: white;
-            padding: 10px 20px;
-            margin: 8px 0;
-            border: none;
-            cursor: pointer;
-            width: 100%;
-            height: auto;
-        }
-
-
-        .container {
-            padding: 16px;
-        }
-
-        .msg {
-            padding: 0px;
-        }
-
-
-        .err {
-            color: red;
-        }
-
-        h1 {
-            text-align: center;
-        }
-    </style>
+   
 
 </head>
 <body style="margin-bottom:80px;">
