--- a/Medicine_Retail_Poc/ASP.NET_Medicine_POC/MedicineManagement/MedicineManagement/Views/Medicine/Home.cshtml
+++ b/Medicine_Retail_Poc/ASP.NET_Medicine_POC/MedicineManagement/MedicineManagement/Views/Medicine/Home.cshtml
@@ -3,30 +3,10 @@
 @{
     ViewData["Title"] = "Medicines by Category";
     Layout = "~/Views/Shared/Disease.cshtml";
+    <link rel="stylesheet" href="~/css/medicine_home.css">
 }
 
 
-<style>
-    /* Custom table styles */
-    .custom-table {
-        border: 2px solid black;
-    }
-
-        .custom-table th {
-            border: 1px solid black;
-            font-weight: bold;
-            background-color: lightblue;
-        }
-
-        .custom-table td {
-            border: 1px solid black;
-        }
-
-        /* Change row background on hover */
-        .custom-table tbody tr:hover {
-            background-color: #FFFFE0;
-        }
-</style>
 
 <div class="row mt-4">
     <div class="col-12">
