--- a/Medicine_Retail_Poc/ASP.NET_Medicine_POC/MedicineManagement/MedicineManagement/Views/Medicine/Update.cshtml
+++ b/Medicine_Retail_Poc/ASP.NET_Medicine_POC/MedicineManagement/MedicineManagement/Views/Medicine/Update.cshtml
@@ -20,39 +20,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-
-    <style>
-
-
-
-        /* Adjust the width and spacing of the form container */
-        .form-container {
-            width: 80%;
-            margin: 5px auto;
-            padding: 5px 10px; /* Adjust the padding to decrease container height */
-            border: 3px solid #f1f1f1;
-            border-color: #244b81;
-        }
-
-        h4 {
-            
-            margin-top:120px;
-            margin-left:110px
-        }
-
-        /* Add border to all input fields */
-        input[type="text"],
-        select,
-        input[type="file"],
-        input[type="date"] {
-            border: 1px solid #f1f1f1;
-            border-color: black;
-            padding: 6px 12px;
-            width: 100%;
-        }
-
-    </style>
-
+    <link rel="stylesheet" href="~/css/medicine_update.css">
 </head>
 <body>
 
