--- a/Medicine_Retail_Poc/ASP.NET_Medicine_POC/MedicineManagement/MedicineManagement/Views/Disease/Create.cshtml
+++ b/Medicine_Retail_Poc/ASP.NET_Medicine_POC/MedicineManagement/MedicineManagement/Views/Disease/Create.cshtml
@@ -13,72 +13,8 @@
     <title>@ViewData["Title"]</title>
     <!-- Add this section to include Bootstrap CSS -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-    <style>
-        .centered-alert {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: rgba(0, 0, 0, 0.5);
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            z-index: 9999;
-        }
+    <link rel="stylesheet" href="~/css/disease.css">
 
-        h1 {
-            margin-top: 100px;
-            margin-bottom: 10px;
-            margin-left: 52px;
-            font-size: 28px;
-        }
-
-        .form-container {
-            border: 3px solid #244b81;
-            padding: 30px;
-            border-radius: 5px;
-            /* background-color: #F7CAC9;*/
-            min-height: 350px;
-            /* max-width: 350px; */
-            margin-left: 30px;
-        }
-
-        label {
-            margin-bottom: 20px;
-            display: block;
-            font-size: 16px;
-        }
-
-        input[type="text"],
-        select {
-            margin-bottom: 25px;
-            padding: 12px;
-            font-size: 16px;
-            border: 1px solid #f1f1f1;
-            border-color: black;
-        }
-
-        .form-group.mt-4 {
-            margin-top: auto; /* Align the "Save" button towards the bottom */
-            padding-top: 5px;
-            padding-bottom: 5px;
-        }
-
-        .form-group input {
-            border: 1px solid #f1f1f1;
-            border-color: black;
-        }
-
-        .btn-primary.btn-lg {
-            padding: 10px 20px;
-            font-size: 18px;
-            display: block; /* Center the button horizontally */
-            margin: 0;
-            background-color: #244b81;
-        }
-
-    </style>
 </head>
 <body>
     @if (ViewBag.LoginMessage != null)
