--- a/Medicine_Retail_Poc/ASP.NET_Medicine_POC/MedicineManagement/MedicineManagement/Views/Medicine/Index.cshtml
+++ b/Medicine_Retail_Poc/ASP.NET_Medicine_POC/MedicineManagement/MedicineManagement/Views/Medicine/Index.cshtml
@@ -23,48 +23,7 @@
 <head>
     <!-- Include the Bootstrap CSS link -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-
-    <style>
-
-        /* Center Message Overlay Styles */
-        .centered {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: rgba(0, 0, 0, 0.5);
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            z-index: 9999;
-        }
-
-        /* Adjust the width and spacing of the form container */
-        .form-container {
-            width: 80%;
-            margin: 8px 50px;
-            padding: 7px 15px;
-            border: 3px solid #f1f1f1;
-            border-color: #244b81;
-        }
-
-        h1 {
-            text-align: center; /* Center the heading */
-        }
-
-        /* Add border to all input fields */
-        input[type="text"],
-        select,
-        input[type="file"],
-        input[type="date"] {
-            border: 1px solid #f1f1f1;
-            border-color: black;
-            padding: 6px 12px;
-            width: 100%;
-        }
-
-    </style>
+    <link rel="stylesheet" href="~/css/medicine_index.css">
 
 </head>
 <body>
