medicine display and detail css

--- a/Medicine_Retail_Poc/ASP.NET_Medicine_POC/MedicineManagement/MedicineManagement/Views/Home/MedicineDetails.cshtml
+++ b/Medicine_Retail_Poc/ASP.NET_Medicine_POC/MedicineManagement/MedicineManagement/Views/Home/MedicineDetails.cshtml
@@ -3,6 +3,7 @@
 @{
     ViewData["Title"] = "Medicines by Category";
     Layout = "~/Views/Shared/_Layout.cshtml";
+    <link rel="stylesheet" href="~/css/home_detail.css">
 }
 
 <div class="row">
@@ -35,9 +36,3 @@
     }
 </div>
 
-<style>
-    .highlight {
-        padding: 2px 4px;
-        border-radius: 3px;
-    }
-</style>
