--- a/Medicine_Retail_Poc/ASP.NET_Medicine_POC/MedicineManagement/MedicineManagement/Views/Home/MedicineDisplay.cshtml
+++ b/Medicine_Retail_Poc/ASP.NET_Medicine_POC/MedicineManagement/MedicineManagement/Views/Home/MedicineDisplay.cshtml
@@ -2,23 +2,10 @@
 @{
     ViewData["Title"] = "MedicineDisplay";
     Layout = "~/Views/Shared/_Layout.cshtml";
+    <link rel="stylesheet" href="~/css/home_display.css">
 }
 
-<style>
-    /* ... Your existing styles ... */
-    .highlight {
-        font-weight: bold;
-        color: #244b81;
-    }
 
-    .center-align {
-        text-align: center;
-    }
-
-    .mb-3 {
-        margin-bottom: 1rem;
-    }
-</style>
 
 <div class="container mb-3">
     <div class="row justify-content-center">
