layout css seperation

--- a/Medicine_Retail_Poc/ASP.NET_Medicine_POC/MedicineManagement/MedicineManagement/Views/Shared/_Layout.cshtml
+++ b/Medicine_Retail_Poc/ASP.NET_Medicine_POC/MedicineManagement/MedicineManagement/Views/Shared/_Layout.cshtml
@@ -11,48 +11,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lemonada:wght@300&display=swap" rel="stylesheet">
-    <style>
-        html *{
-            font-family: 'Lemonada', cursive;
-        }
-
-        ul li{
-            margin-right:20px;
-        }
-
-        ul li a.active {
-            /*  background-color:lightskyblue;*/
-            background-color: #5893d4;
-            color: white;
-            border-radius: 25px;
-        }
-
-        ul li a:hover {
-            background-color: cadetblue;
-            border-radius: 25px;
-            height: 45px;
-        }
-
-        ul li a {
-            display: block;
-            color: white;
-            font-weight:bold;
-            text-decoration: none;
-            font-size: 20px;
-            padding: 10px 20px;
-        }
-
-        ul li p {
-            display: block;
-            color: gold;
-            font-weight: bold;
-            text-decoration: none;
-            font-size: 20px;
-            padding: 10px 20px;
-            font-style: italic;
-            height:0px;
-        }
-    </style>
+    <link rel="stylesheet" href="~/css/layout.css">
 </head>
 <body>
     <header>
