--- a/Medicine_Retail_Poc/ASP.NET_Medicine_POC/MedicineManagement/MedicineManagement/Views/Shared/Disease.cshtml
+++ b/Medicine_Retail_Poc/ASP.NET_Medicine_POC/MedicineManagement/MedicineManagement/Views/Shared/Disease.cshtml
@@ -9,60 +9,7 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/MedicineManagement.styles.css" asp-append-version="true" />
-    <style>
-        html a{
-            font-family: monospace;
-        }
-
-        #helloLink.active {
-            background-color: #5893d4; /* Set the desired background color */
-            color: white; /* Set text color to ensure readability */
-            border-radius: 25px;
-        }
-
-        ul li a:hover {
-            background-color: cadetblue;
-            border-radius: 25px;
-            height: 45px;
-        }
-
-        ul li a {
-            display: block;
-            color: white;
-            
-            text-decoration: none;
-            font-size: 20px;
-            padding: 10px 20px;
-        }
-
-        ul li p {
-            display: block;
-            color: gold;
-            font-weight: bold;
-            text-decoration: none;
-            font-size: 20px;
-            padding: 10px 20px;
-            font-style: italic;
-            height:0px;
-        }
-
-        .side_bar{
-            margin-top: 100px;
-        }
-
-        /* Active navigation item style */
-
-        /*
-                .sidebar ul li a.active {
-                    background-color: darkcyan;
-                }*/
-
-
-        .sidebar ul li a.active {
-            background-color: #3a6ea5;
-            color: white; /* Set text color to ensure readability */
-        }
-    </style>
+    <link rel="stylesheet" href="~/css/disease_layout.css">
 
 </head>
 <body style="height: 100%; margin: 0;">
